# access_control_rp2zk

./: Dockerfile  README.md  main.py  q_scheduler.py  secure_doorlock.py  setup_ngrok.sh
auto-authen/: check_internet.sh  install.sh  internet-authen.service  internet-authen.timer
diagram/: FailSecure-Schematic.xopp  FailSecure-StateDiagram.xopp
rp2/: main.py  q_scheduler.py  secure_doorlock.py
v2023/: Dockerfile  README.md
v2023/rp2/: network_config_default.json
v2023/worker/: config.json
v2023/worker/api/: deluser.md  reserve.md  userinfo.md
v2023/worker/pyzk_examples/: pyzk_userinfo.py
v2023/worker/testgui/: ac_supportsw.ui
v2024/: README.md
v2024/firmware/: CMakeLists.txt
v2024/firmware/include/: app_accessctrl.h  app_button.h  app_buzzer.h  app_dsk4t100.h  app_led.h  app_mqtt.h  app_outage.h  board_driver_rp2.h
v2024/firmware/src/: app_accessctrl.c  app_button.c  app_buzzer.c  app_dsk4t100.c  app_led.c  app_mqtt.c  app_outage.c  board_driver_rp2.c  main_app.c
v2024/kicad/: FailSecure_DS-K4T100.kicad_pcb  FailSecure_DS-K4T100.kicad_pro  FailSecure_DS-K4T100.kicad_sch
v2024/kicad/lib/: 1TS002B-2300-4301-CT.kicad_sym  BX-DS2.54-4PTP.kicad_sym  DC-044-B200.kicad_sym  HX_PM2.54-2x5P_WT.kicad_sym  JZC-32F.kicad_sym  MF-MSMF150-24X-2.kicad_sym  SMAJ26A.kicad_sym  SS-12D11G5R.kicad_sym  SWPA4030S3R3MT.kicad_sym  TPS563200DDCR.kicad_sym  W-1251R07P-0200.kicad_sym  WAFER-200W-4A.kicad_sym  WAFER-200W-4P.kicad_sym  WAFER-200W-6A.kicad_sym  WJ2EDGRC-5.08-2P.kicad_sym  WJ2EDGRC-5.08-8P.kicad_sym  YS-SBZ9650DYB05.kicad_sym
v2024/kicad/lib/1TS002B-2300-4301-CT.3dshapes/: SW-SMD_L6.0-W3.5-H5.0-P7.5-LS8.0.step  SW-SMD_L6.0-W3.5-H5.0-P7.5-LS8.0.wrl
v2024/kicad/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
v2024/rp2_examples/bsp/: CMakeLists.txt
v2024/rp2_examples/bsp/src/: main_bsp.c
v2024/rp2_examples/mqtt_example/: CMakeLists.txt
v2024/rp2_examples/mqtt_example/src/: main_mqtt.c
v2024/worker/: Dockerfile  README.md  acworker.py  config.json  config_default.json  door.py  requirements.txt
v2024/worker/hikvision_isapi/: authen_example.py  config_default.json  event_example.py  payload_data_isapi.json  person_management.py  remote_door.py  user_default.json
worker/: access_control.py  config.json  requirement.txt  requirements.txt  test_aiomqtt.py  worker_accessctrl.py  worker_door.py
worker/api/: adduser.md  attend.md
worker/pyzk_examples/: pyzk_door.py  pyzk_livecapture.py  pyzk_manageuser.py
worker/testgui/: ac_supportsw.ui  app.py  qt_supportsw.py
(+39 files in other folders)
